--- a/lang/settings.json
+++ b/lang/settings.json
@@ -1,6 +1,6 @@
 {
-    "name": "English",
-    "lang_code": "en",
+    "name": "Русский",
+    "lang_code": "ru",
     "description": "Just base english",
     "link": "",
     "monospace_fonts": false,
