--- a/lang/changes.json
+++ b/lang/changes.json
@@ -1,14 +1,10 @@
 {
-    "1.2.0": {
-        "description": "- Changes in menu for new loading thing.",
+    "0.1.1": {
+        "description": "placeholder",
         "files": []
     },
-    "1.1.0": {
-        "description": "- More updates.",
-        "files": []
-    },
-    "1.0.1": {
-        "description": "- Some updates.",
+    "0.1.0": {
+        "description": "placeholder",
         "files": []
     }
 }
