--- a/lang/settings.json
+++ b/lang/settings.json
@@ -3,17 +3,11 @@
     "lang_code": "ru",
     "description": "Just base english",
     "link": "",
-    "monospace_fonts": false,
-    "special_mode": false,
-    "enable_translated_songs_switch": false,
-    "translator_mode": false,
+    "monospace_fonts": true,
+    "special_mode": true,
+    "enable_translated_songs_switch": true,
+    "translator_mode": true,
     "line_height_factor": 1,
-    "files_url": "https://raw.githubusercontent.com/Lazy-Desman/EngDeltranslatePack/refs/heads/main/",
-    "datas_url": [
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_menu.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch1.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch2.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch3.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch4.win"
-    ]
+    "files_url": "https://github.com/bshtkchndk/DTRRU_bebebesbababa/lang/",
+    "datas_url": []
 }
