--- a/lang/settings.json
+++ b/lang/settings.json
@@ -8,6 +8,6 @@
     "enable_translated_songs_switch": false,
     "translator_mode": true,
     "line_height_factor": 1,
-    "files_url": "",
+    "files_url": "https://raw.githubusercontent.com/bshtkchndk/DTRRU_bebebesbababa/refs/heads/main/lang/",
     "datas_url": ""
 }
