--- a/lang/changes.json
+++ b/lang/changes.json
@@ -1,4 +1,8 @@
 "0.1.1": {
 	"description": "Проверка работы функций обновлений",
 	"name": "Связь",
+	"files": [
+		"settings.json", 
+		"change.json"
+	]
 }
