--- a/lang/changes.json
+++ b/lang/changes.json
@@ -1,10 +1,18 @@
 {
-	"0.1.0": {
-		"description": "Проверка работы функций обновлений",
-		"name": "Связь",
-		"files": [
-			"settings.json", 
-			"change.json"
-		]
-	}
+    "1.3.0": {
+        "description": "- Beeeebeebeeebs.",
+        "files": []
+    },
+	"1.2.0": {
+        "description": "- Changes in menu for new loading thing.",
+        "files": []
+    },
+    "1.1.0": {
+        "description": "- More updates.",
+        "files": []
+    },
+    "1.0.1": {
+        "description": "- Some updates.",
+        "files": []
+    }
 }
