--- a/lang/changes.json
+++ b/lang/changes.json
@@ -1,4 +1,8 @@
 {
+	"2.0.1": {
+        "description": "Ch2",
+        "files": ["chapter1/strings.json"]
+    },
 	"1.1.0": {
         "description": "- More updates.",
         "files": [
